# nutritionverse_postprocessing

./: .gitignore  LICENSE  LICENSE_MAIN  pyproject.toml
src/nvpostprocess/: texturing_with_meshlab.py
src/nvpostprocess/text2tex/: LICENSE  LICENSE_LIST  generate_nutritionverse_textures.py  generate_texture.py
src/nvpostprocess/texturing/: texturing.mlx
